[package]
name = "monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-client = "2.0.1"
solana-sdk = "2.0.1"
tokio = "1.36.0"
dotenv = "0.15.0"
solana-account-decoder = "2.0.1"
futures-util = "0.3.30"
base64 = "0.22.1"
solana-transaction-status = "2.0.2"
signature = "2.2.0"
ring = "=0.17.8"
bs58 = "0.5.1"
spl-token = "6.0.0"
solana-program = "2.0.2"